@@ -16,7 +16,8 @@ import com.metaweb.gridworks.commands.Command;
 import com.metaweb.gridworks.exporters.CsvExporter;
 import com.metaweb.gridworks.exporters.Exporter;
 import com.metaweb.gridworks.exporters.HtmlTableExporter;
-import com.metaweb.gridworks.exporters.TripleloaderExporter;
+import com.metaweb.gridworks.exporters.ProtographTransposeExporter.TripleLoaderExporter;
+import com.metaweb.gridworks.exporters.ProtographTransposeExporter.MqlwriteLikeExporter;
 import com.metaweb.gridworks.exporters.TsvExporter;
 import com.metaweb.gridworks.exporters.XlsExporter;
 import com.metaweb.gridworks.model.Project;
@@ -26,10 +27,11 @@ public class ExportRowsCommand extends Command {
     static final protected Map<String, Exporter> s_formatToExporter = new HashMap<String, Exporter>();
 
     static {
-        s_formatToExporter.put("tripleloader", new TripleloaderExporter());
         s_formatToExporter.put("html", new HtmlTableExporter());
         s_formatToExporter.put("xls", new XlsExporter());
         s_formatToExporter.put("csv", new CsvExporter());
+        s_formatToExporter.put("tripleloader", new TripleLoaderExporter());
+        s_formatToExporter.put("mqlwrite", new MqlwriteLikeExporter());
     }
 
     public void doPost(HttpServletRequest request, HttpServletResponse response)
