@@ -23,6 +23,7 @@ Fixes:
 Features:
 - Row/record sorting (Issue 32)
 - CSV exporting (Issue 59)
+- Mqlwrite exporting
 
 Changes:
 - Moved unit tests from JUnit to TestNG
